--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "open": "npx cypress open"
+    "test": "npx cypress run --browser chrome",
+    "open": "npx cypress open",
+    "cy:dash": "npx cypress run --record --key df74cdd5-5ffa-42cb-9e02-bbdea0bf1dfd"
   },
   "keywords": [],
   "author": "",
